3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

This change mostly deals with improving behaviour of pet monstes.
Most of the code is from K. Reinert - however, I did some code cleanup/
fixes related to pet monsters, so it is difficult to note where
each piece of code came from.  One thing this does fix is handling of
multipart pets - these now work properly.
common/map.c: Update comment for get_rangevector() - no code change.
common/object.c: Add get_search_arr() which is used in pet monster code.
   This returns a semi random scrambling of the freearr array.
doc/Developers/protocol: Update documentation about map1a protocol command.
include/libproto.h, include/sproto.h: rebuilt.
server/attack.c: Have drain attacks return 1 damage so that it is clear
   that you are actually hitting your opponent.  Otherwise, you would
   get messages that 'you missed xyz', even though you are draining it.
   This extra point of damage shouldn't change balance in any significant
   way.
server/monster.c: Update hnadling of enemies for pet monsters. It should
   more intelligently choose the monsters and not switch/clear the
   enemy field for no reason anymore.  Change find_nearest_living_creature to
   use the get_search_arr() to more randomly choose direction of target - 
   before, there was a proclivity to always look in the north direction.
   Modify can_hit() to look for closes part of enemy - otherwise, monsters
   may not attack opponents even if they were right next to them because
   they couldn't get to the enemies head.  Remove move_object from
   this function - merged with move_ob in move.c
server/move.c:  Fix move_ob to use 'cleaner' code of move_object, but